src/chat.css
:root {
    --sentBack: #00162c; /* Change sent message background color to #ff4500 */
    --sentText: #f2f2f2; /* Change sent message text color to #ffffff */
  
    --recBack: #003c78; /* Change received message background color to #0088cc */
    --recText: #f2f2f2; /* Change received message text color to #000000 */
}

.chat {
    flex: 0.65;
    display: flex;
    flex-direction: column;
}

.chat_header {
    padding: 20px;
    display: flex;
    align-items: center;
    border-bottom: 0.2px solid rgb(192, 178, 178);
    border-left: 0.2px solid rgb(192, 178, 178);
}

.chat_header_info {
    flex: 1;
    padding-left: 20px;
}

.chat_body {
    flex: 1;
    background-size: cover; /* or background-size: 100% 100%; */
    padding: 30px;
    overflow: scroll;
    overflow-x: hidden;
    background-color: #bdc9d1;
    background-image: url("Assets/blob-scene-haikei.png")
    /* background-image: url("Assets/stacked-peaks-haikei.png") */
}

.chat_message {
    position: relative;
    font-size: 18px;
    color: var(--sentText);
    border-radius: 18px;
    width: fit-content;
    padding: 13px;
    background-color: var(--sentBack);
    margin-bottom: 30px;
    font-family: 'League Spartan', sans-serif;
}

.chat_name {
    position: absolute;
    color: black;
    font-weight: 800;
    font-size: x-small;
    top: -15px;
}
  
.chat_got {
    margin-left: auto;
    background-color: var(--recBack);
    color: var(--recText);
}

.chat_footer {
    display: flex;
    align-items: center ;
    justify-content: space-between;
    height: 62px;
    border-top: 1px solid lightgray;
}

.chat_footer > form {
    flex: 1;
    display: flex;
    /* background-color: blue; */
}

.chat_footer > form > input {
    flex: 1;
    border-radius: 30px;
    padding: 3px;
    padding: 10px 8px;
    border: none;
    outline: none;
    align-items: center;
}

.chat_footer > form > button {
    display: block;
}





#style-8::-webkit-scrollbar-track {
    border: 1px solid black;
    background-color: #f5f5f5;
  }
  
  #style-8::-webkit-scrollbar {
    width: 10px;
    background-color: #f5f5f5;
  }
  
  #style-8::-webkit-scrollbar-thumb {
    background-color: hsl(0, 7%, 18%);
  }
  
  #wrapper {
    height: 100%;
    overflow: hidden;
  }
  
  .scrollbar {
    height: 100%;
    overflow-y: scroll;
    padding-right: 10px; /* Add a padding to prevent content from overlapping with scrollbar */
  }
  
  .force-overflow {
    min-height: 100%; /* Ensure the content fills the entire scrolling area */
  }
  

